Fixed image resizing so that it does not get too small when the window gets too small.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -29,6 +29,7 @@ body {
 
 .avatar {
     width: auto;
+    min-width: 130px;
     max-width: 30%;
     height: auto;
 }
